--- a/authenticate-me/frontend/public/index.html
+++ b/authenticate-me/frontend/public/index.html
@@ -7,6 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>React Template</title>
+  <link rel="icon" href="/g-icon.ico">
   <script src="https://kit.fontawesome.com/f94e3da67b.js" crossorigin="anonymous"></script>
 </head>
 
