some text style edits

--- a/authenticate-me/frontend/public/index.html
+++ b/authenticate-me/frontend/public/index.html
@@ -8,6 +8,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>React Template</title>
   <link rel="icon" href="/g-icon.ico">
+  <link href="https://fonts.cdnfonts.com/css/graphik" rel="stylesheet">
   <script src="https://kit.fontawesome.com/f94e3da67b.js" crossorigin="anonymous"></script>
 </head>
 
